# trading-engine-py

./: .gitignore  .markdownlint.json  CONTRIBUTING.md  Dockerfile  README.md  TODO-HISTORY.md  TODO.md  pyproject.toml
.claude/plugins/git_quality_standards/: README.md
.claude/plugins/git_quality_standards/scripts/: create-pr.sh  install-git-hooks-enhanced.sh  install-git-hooks.sh  pre-push-hook.sh
.claude/plugins/git_quality_standards/templates/: .validation_exceptions.template
.claude/plugins/git_quality_standards/workflows/: validation.yml
.github/: pull_request_template.md
.github/workflows/: pr-checks.yml
docs/implementation/: TSE-0001.12.0b-prometheus-metrics.md
docs/prs/: chore-epic-TSE-0001-foundation-add-git-quality-standards.md  chore-epic-TSE-0001-todo-journal-system.md  feat-epic-TSE-0001-prometheus-metrics-client.md  feature-TSE-0001.12.0-named-components-foundation.md  feature-TSE-0001.12.0b-prometheus-metrics-client.md  feature-epic-TSE-0001-named-components-foundation.md  feature-epic-TSE-0001.3c-python-grpc-integration.md  main.md  refactor-epic-TSE-0001-data-adapters-and-orchestrator.md  refactor-epic-TSE-0001.4.5-trading-data-adapter-integration.md
scripts/: README.md  create-pr.sh  pre-push-hook.sh  validate-all.sh  validate-repository.sh  validate_tse_0001_3c.py
src/trading_system/: __init__.py  main.py
src/trading_system/application/: __init__.py
src/trading_system/domain/: __init__.py  trading_service.py
src/trading_system/domain/ports/: __init__.py  metrics.py
src/trading_system/infrastructure/: __init__.py  config.py  configuration_client.py  constants.py  grpc_clients.py  logging.py  performance_monitor.py  service_discovery.py
src/trading_system/infrastructure/observability/: __init__.py  metrics_middleware.py  prometheus_adapter.py
src/trading_system/presentation/: __init__.py  health.py  metrics.py
tests/domain/: test_trading_service_behavior.py
tests/integration/: test_configuration_service_client.py  test_inter_service_communication.py
tests/presentation/: test_health_behavior.py
tests/unit/: test_startup.py
tests/unit/domain/ports/: __init__.py  test_metrics_port.py
tests/unit/infrastructure/observability/: __init__.py  test_prometheus_adapter.py
