[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-system-engine"
version = "0.1.0"
description = "Trading system engine for systematic trading"
authors = [
    {name = "Trading Ecosystem Team", email = "team@quantfidential.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "grpcio>=1.59.0",
    "grpcio-tools>=1.59.0",
    "structlog>=23.2.0",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.11.0",
]

[tool.hatch.version]
path = "src/trading_system/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_system"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/trading_system",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
]